package ThingModel.Proto;

message Property {

	required int32 string_key = 1;

	message Location {

		required double x = 1 [default = 0.0];
		required double y = 2 [default = 0.0];
		optional double z = 3 [default = 0.0];

		// WGS84 by default
		optional int32 string_system = 4;
	}

	message String {
		optional string value = 1;

		/**
		 *	A string can be cached using StringDeclaration
		 *	It's just an option, and a developer
		 *	is allowed to ignore this feature
		 *	when he want to send a string property.
		 */
		optional int32 string_value = 2;	
	}

	optional Location location_value = 2;
	optional String string_value = 3;
	optional double double_value = 4;
	optional int32 int_value = 5;
	optional bool boolean_value = 6;
	optional int64 datetime_value = 7;
}
